my second commit

--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div>
-        <h1>Hello is a great day i am very happy</h1>
+        <h1>Hello is a great day i am very happy today</h1>
         <h1>Hello is a great day today God is great</h1>
         <h1>Hello is a great day today i am moving higher</h1>
+        <h1>Hello i must succeed i am a star no want can stop me</h1>
     </div>
 </body>
 </html>
